--- a/app/src/main/res/layout/activity_single_chat_window.xml
+++ b/app/src/main/res/layout/activity_single_chat_window.xml
@@ -1,66 +1,73 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="me.nkkumawat.chatzzz.UI.SingleChatWindow"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-    <ScrollView
-        android:id="@+id/scroll_view"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_above="@+id/linearLayout"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:scrollbarStyle="insideOverlay">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:weightSum="10">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="8"
-                android:orientation="vertical">
-
-                <ListView
-                    android:id="@+id/lv_chat"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:cacheColorHint="@android:color/transparent"
-                    android:divider="@null"
-                    android:dividerHeight="0dp"
-                    android:listSelector="@android:color/transparent"
-                    android:scrollbars="vertical" />
-            </LinearLayout>
-        </LinearLayout>
-    </ScrollView>
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:weightSum="40">
 
     <LinearLayout
         android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="39.5"
+        android:orientation="vertical">
+
+        <ListView
+            android:id="@+id/lv_chat"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:cacheColorHint="@android:color/transparent"
+            android:divider="@null"
+            android:dividerHeight="0dp"
+            android:listSelector="@android:color/transparent"
+            android:paddingBottom="10dp"
+            android:scrollbars="vertical"
+            android:stackFromBottom="true"
+            android:transcriptMode="alwaysScroll" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/linearLayout"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="0dp"
-        android:layout_alignParentBottom="true"
         android:gravity="bottom|center_vertical"
         android:orientation="horizontal"
-        android:weightSum="5"
-        android:id="@+id/linearLayout">
+        android:weightSum="10">
 
         <EditText
             android:id="@+id/msg"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="4" />
+            android:layout_marginLeft="10dp"
+            android:layout_weight="7"
+            android:background="@drawable/border"
+            android:hint="Type your message here"
+            android:inputType=""
+            android:paddingLeft="5dp"
+            tools:ignore="UnusedAttribute" />
+
+        <ImageButton
+            android:id="@+id/pick_image"
+            android:layout_width="10dp"
+            android:layout_height="50dp"
+            android:layout_marginLeft="5dp"
+            android:layout_weight="1"
+            android:background="@drawable/border"
+            app:srcCompat="@drawable/attach" />
 
         <Button
             android:id="@+id/send"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:text="Send" />
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
+            android:layout_weight="2"
+            android:background="@drawable/btn_back"
+            android:text="Send"
+            android:textColor="@android:color/background_light" />
     </LinearLayout>
-</RelativeLayout>
+</LinearLayout>
