--- a/app/src/main/res/layout/list_chat.xml
+++ b/app/src/main/res/layout/list_chat.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/relative_layout"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_marginRight="100dp"
     android:orientation="vertical"
-    android:layout_height="match_parent">
+    android:paddingBottom="5dp">
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:card_view="http://schemas.android.com/apk/res-auto"
@@ -14,36 +16,38 @@
 
         <android.support.v7.widget.CardView
             android:layout_width="match_parent"
-            android:padding="10dp"
             android:layout_height="match_parent"
-            card_view:cardCornerRadius="5dp">
+            android:padding="5dp">
 
-        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-            android:layout_width="match_parent"
+            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                android:layout_width="match_parent"
 
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:paddingRight="10dp">
+                android:layout_height="match_parent"
+                android:layout_marginLeft="10dp"
+                android:background="@drawable/chat_msg_back"
+                android:orientation="vertical"
+                android:paddingRight="10dp">
 
-            <TextView
-                android:id="@+id/message_from"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:paddingLeft="10dp" />
+                <TextView
+                    android:id="@+id/chat_message"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingLeft="10dp"
+                    android:text="TextView"
+                    android:textColor="@color/cardview_light_background"
+                    android:textSize="18sp" />
 
-            <TextView
-                android:id="@+id/chat_message"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="10dp"
-                android:paddingBottom="2dp"
-                android:paddingLeft="10dp"
-                android:paddingRight="20dp"
-                android:text="TextView"
-                android:textColor="@android:color/black"
-                android:textSize="18sp" />
+                <TextView
+                    android:id="@+id/chat_message_time"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="1dp"
+                    android:paddingLeft="10dp"
+                    android:text="TextView"
+                    android:textColor="@color/cardview_light_background"
+                    android:textSize="10sp" />
 
-        </LinearLayout>
+            </LinearLayout>
         </android.support.v7.widget.CardView>
     </LinearLayout>
 </LinearLayout>
